--- a/auth-service/tsconfig.json
+++ b/auth-service/tsconfig.json
@@ -16,6 +16,7 @@
     "strictPropertyInitialization": false,
     "sourceMap": true
   },
+  
   "include": ["src/**/*.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist"],
 }
